k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app
  labels:
    app: springboot-app
spec:
  selector:
    app: springboot-app
  ports:
    - name: http
      port: 80
      targetPort: http
